--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "netlify-plugin-inline-functions-env": "^1.0.9"
   }
 }
